--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>UI Predicate Vue - Getting started</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css"/>
-    <script type="module" crossorigin src="/assets/main-B_u1CSg1.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-C150WzwQ.css">
+    <script type="module" crossorigin src="/ui-predicate-vue3-getting-started/assets/main-B_u1CSg1.js"></script>
+    <link rel="stylesheet" crossorigin href="/ui-predicate-vue3-getting-started/assets/main-C150WzwQ.css">
   </head>
   <body>
     <main class="container">
